bnlearn (4.9.3)

  * fixed a buffer overflow by ASAN in the CRAN tests.

bnlearn (4.9.2)

  * fixed a syntax error in a manpage to pass CRAN tests.

bnlearn (4.9.1)

  * assorted fixes to the Rprintf() format strings to pass the CRAN tests.
  * the default node shape in graphviz.plot(), strength.plot() and
     graphviz.compare() is now "rectangle", which is more space-efficient for
     typical node labels.
  * graphviz.compare() now accepts bn.fit objects, converting them to the
     corresponding bn objects to compare the respective network structures.
  * fixed a segfault in ci.test(), triggered by setting the conditioning 
     variable set to a zero-column matrix (thanks Qingyuan Zheng).

bnlearn (4.9)

  * as.prediction() is now deprecated and will be removed by the end of 2024.
  * graphviz.plot(), strength.plot() and graphviz.compare() now have a
     "fontsize" argument that controls the font size of the node labels.
  * removed the rbn() method for bn objects.
  * predict() and impute() can now use exact inference with method = "exact" for
     discrete and Gaussian networks.
  * the "custom" score now accepts incomplete data.
  * it is now possible to use the "custom" score to implement custom Bayesian
     scores in BF() and bf.strength().
  * fixed the conditional probabilities computed by cpquery(), which now 
     disregards particles for which either the evidence or the event
     expressions evaluate to NA (thanks Simon Rauch).
  * added a complete.graph() function to complement empty.graph().
  * removed the "empty" method of random.graph(), use empty.graph() instead.
  * structural.em() can now use exact inference in the expectation step with 
      impute = "exact".
  * structural.em() can now be called from bn.boot(), boot.strength() and 
      bn.cv().
  * updated as.bn.fit() to work with the latest gRain release.
  * fixed segfault in tree.bayes() with illegal whitelists and blacklists.