@@ -2,8 +2,8 @@ Package: bnlearn
 Type: Package
 Title: Bayesian Network Structure Learning, Parameter Learning and
         Inference
-Version: 4.9.3
-Date: 2024-03-15
+Version: 4.9.4
+Date: 2024-05-02
 Depends: R (>= 4.3.0), methods
 Suggests: parallel, graph, Rgraphviz, igraph, lattice, gRbase, gRain
         (>= 1.3-3), ROCR, Rmpfr, gmp
@@ -26,6 +26,6 @@ SystemRequirements: USE_C17
 License: GPL (>= 2)
 LazyData: yes
 NeedsCompilation: yes
-Packaged: 2024-03-15 11:07:37 UTC; fizban
+Packaged: 2024-05-02 17:13:25 UTC; fizban
 Repository: CRAN
-Date/Publication: 2024-03-15 13:00:02 UTC
+Date/Publication: 2024-05-02 22:30:02 UTC
